src/public/css/custom.css
/* ... */
.highlight_photo {padding-right:1.5em; padding-left:1.5em; position:relative; bottom:1.5em;}


.highlight_controls {clear:both; background-color:#d8e6f2; text-align: center; padding:.8em;}
.glyphicon-forward, .glyphicon-backward {color:#3598db;}


.glyphicon-list {color:#ffffff;}
.center_text {text-align: center;}
.letter_header {margin-top:1.5em; margin-right:.4em; font-family:tahoma, Geneva, sans-serif; font-weight:bold;  font-size:1.6em; color:#8f8d8d; background-color:#fdf3d0; padding-left:.7em; padding-top:.1em; padding-bottom:.1em;}
.alph_terms {margin-left:1em; margin-right:1em; min-height:800px;}

.qg_column {border-style:solid; border-width:1px; border-color:#d3d9d9; min-height:1370px; margin-top:1.1em;  }

.qg_header {font-weight:bold; color:#3598db; font-family:tahoma, geneva, sans-serif; letter-spacing:.06em; }

td.qg_table {padding-left:.5em;}

.tg_header_narrow {color:#e77e23; padding:.7em; padding-left:1em; font-weight:bold; }

.qg_this_pg {background-color:#fcf1c7; border-style:solid; border-color:#f8e289; border-width:1px; margin-top:1.1em; min-height:450px; padding:1em; }

.qg_content, .qg_term {margin-top:1.1em;  }

.qg_page {font-weight:bold; margin-bottom:.5em; }

ul.qg_list {list-style-type:square; color:#3598db; margin-top:.3em;}

ul.qg_list2 {list-style-type:square; color:#777777; margin-top:.3em;}

li.qg_li {padding-top:.7em; margin-left: -1.7em;}
.yellow_divider {background-color:#f8e289; height:1px;}
.white_divider {background-color:#ffffff; height:1px;}
.gray_divider {background-color:#d3d9d9; height:1px;}


.qgphoto {padding-left:1em; padding-bottom:1em; }

.qgphoto_inset {padding-bottom:1em; padding-top:1.2em;}

.photo_caption {font-size:.8em; padding-right:2.5em; padding-left:.5em; position:relative; bottom:1em; padding-bottom:1em;}

.carousel_image {float:right;}

.carousel_photo_caption {font-size:.8em; padding-right:2.5em; padding-left:3em; padding-bottom:1em; padding-top:.7em;}

.carousel_bullet {margin-left:1.5em; margin-bottom:.8em;}

.carousel_connector {margin-left:4.5em; margin-bottom:.8em; font-weight:bold;}

.glyphicon-list-alt, .glyphicon-pushpin {color:#3598db; font-size:1.3em; padding-right:.2em;}

.glyphicon-pencil {color:#f39c11; font-size:1.3em; padding-right:.2em;}


.orange_header2 {font-weight:bold; color:#e77e23; padding-bottom:1em; padding-top:1em; }
.qg_resources {border-style:solid; border-color:#d3d9d9; border-width:1px; margin-top:1.1em; min-height:625px; padding:1em; }

.qg_contribute {border-style:solid; border-color:#d3d9d9; border-width:1px; margin-top:1.1em; min-height:250px; padding:1em; }

.toplink  {margin-bottom:1em; margin-left:1em; color:#298ccf; text-align: right;}
.glyphicon-upload {color:#3598db; font-size:1.3em; vertical-align:top; padding-right:.3em;}


.fa-arrows-v, .glyphicon-ban-circle, .glyphicon-eye-close  {font-size:1.1em; padding-right:.3em; color:#e77e23;}

.fa-lock {font-size:1.2em; padding-right:.4em; color:#ebbd05;}
.fa-gears {font-size:1.2em; padding-right:.5em; color:#3598db;}
.glyphicon-link {font-size:1.1em; padding-right:.3em; color:#3598db;}

.small_divider {margin-left:1.2em; margin-top:.6em;}

.detail_column {width:12%;min-width:250px;}
.bold_text {font-weight:bold;}
.small_col_width {width:40%; min-width:250px;}

.fa-coffee {padding-right:.5em;}

.stat_box {border-style:solid; border-color:#c7d1d1; border-width:1px; padding:.5em; background-color:#f2f5f5; text-align:center;}

.stat_count {font-weight:bold; color:#3598db; font-family:arial, geneva, sans-serif; font-size:1.8em;}

.stat_label {color:#50595a; font-family:arial, geneva, sans-serif; font-size:1.1em;}

.glyphicon-time {color:#e77e23; padding-right:.35em;}

.glyphicon-envelope {position:relative; top:.2em; padding-left: .5em;}

.browse {min-height:1300px;}
.buggy {padding-right:.1em; padding-bottom:.2em;}
.violence {padding-bottom:.1em;}
.fa-briefcase {font-size:1.3em; padding-right:.2em; color:#2a80b9; position:relative; top:.1em;}
.fa-comments {font-size:1.3em; padding-right:.2em; color:#e77e23;}
.glyphicon-bullhorn {font-size:1.2em; padding-right:.2em; color:#efba03;}
.browse_icon {padding-right:.4em; position:relative; bottom:.2em;}

.glyphicon-envelope {position:relative; top:.2em; padding-left: .3em;}

a:focus, :active{
  outline: 0;
  -moz-outline: 0;
}

